--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,23 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/card_view_background"
     android:gravity="center_horizontal"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
-    <android.support.v7.widget.CardView
+    <com.vpaveldm.wordcards.Card
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_gravity="center"
+        android:layout_margin="16dp"
         android:layout_weight="1"
-        app:cardCornerRadius="4dp">
+        app:cardCornerRadius="8dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -25,8 +27,8 @@
             <TextView
                 android:id="@+id/word_text_view"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:gravity="center|bottom"
                 android:textSize="36sp"
                 tools:text="Mother"/>
@@ -34,32 +36,40 @@
             <TextView
                 android:id="@+id/transcription_text_view"
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/word_text_view"
                 android:gravity="center|top"
                 tools:text="[ˈmʌðə]"/>
 
-        </LinearLayout>
-    </android.support.v7.widget.CardView>
+            <LinearLayout
+                android:layout_centerHorizontal="true"
+                android:layout_alignParentBottom="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+
+                <Button
+                    android:id="@+id/x_button"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/ic_x"/>
+
+                <Button
+                    android:id="@+id/ok_button"
+                    android:layout_width="45dp"
+                    android:layout_height="45dp"
+                    android:layout_margin="8dp"
+                    android:background="@drawable/ic_ok"/>
+
+            </LinearLayout>
+
+        </RelativeLayout>
+
+    </com.vpaveldm.wordcards.Card>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center_horizontal">
-
-        <Button
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="8dp"
-            android:background="@drawable/ic_x"/>
-
-        <Button
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="8dp"
-            android:background="@drawable/ic_ok"/>
-
-    </LinearLayout>
+        android:layout_weight="1"></LinearLayout>
 
 </LinearLayout>
