--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,7 +19,7 @@
         android:layout_weight="1"
         app:cardCornerRadius="8dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -27,8 +27,8 @@
             <TextView
                 android:id="@+id/word_text_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:gravity="center|bottom"
                 android:textSize="36sp"
                 tools:text="Mother"/>
@@ -36,40 +36,44 @@
             <TextView
                 android:id="@+id/transcription_text_view"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/word_text_view"
+                android:layout_height="0dp"
+                android:layout_weight="1"
                 android:gravity="center|top"
                 tools:text="[ˈmʌðə]"/>
 
-            <LinearLayout
-                android:layout_centerHorizontal="true"
-                android:layout_alignParentBottom="true"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <Button
-                    android:id="@+id/x_button"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/ic_x"/>
-
-                <Button
-                    android:id="@+id/ok_button"
-                    android:layout_width="45dp"
-                    android:layout_height="45dp"
-                    android:layout_margin="8dp"
-                    android:background="@drawable/ic_ok"/>
-
-            </LinearLayout>
-
-        </RelativeLayout>
+        </LinearLayout>
 
     </com.vpaveldm.wordcards.Card>
 
     <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/x_button"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/ic_x"/>
+
+        <Button
+            android:id="@+id/ok_button"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_margin="8dp"
+            android:background="@drawable/ic_ok"/>
+
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"></LinearLayout>
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="50sp"/>
+
+    </LinearLayout>
 
 </LinearLayout>
