--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#0a8e7f</color>
+    <color name="colorPrimaryDark">#1e645c</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="startColor">#0d776b</color>
+    <color name="endColor">#00a996</color>
 </resources>
