--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#0a8e7f</color>
     <color name="colorPrimaryDark">#1e645c</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#921f1f</color>
     <color name="startColor">#0d776b</color>
     <color name="endColor">#00a996</color>
 </resources>
