--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -15,7 +15,7 @@
         android:layout_height="0dp"
         android:layout_gravity="center"
         android:layout_margin="16dp"
-        android:layout_weight="1"
+        android:layout_weight="2"
         app:cardCornerRadius="8dp">
 
         <LinearLayout
@@ -45,8 +45,9 @@
     </com.vpaveldm.wordcards.Card>
 
     <LinearLayout
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp">
 
         <TextView
             android:layout_width="match_parent"
