--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/card_view_background"
@@ -13,6 +14,9 @@
         android:id="@+id/card_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:primary_color="@color/colorPrimary"
+        app:back_color="@color/white"
+        app:card_background="@color/white"
         android:layout_gravity="center"
         android:layout_margin="16dp"
         android:layout_weight="2"
